# HolyText

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
holytext/: __init__.py  analyze.py  b_magic.py  format.py  l_magic.py  transform.py
