[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "holytext-lib"
version = "0.0.3"
description = "A simple Python library."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "German Stroheim" }
]

dependencies = []
